welcome.lessons.welcome.array.array667.Array667.scala.error
array667:10: error: ';' expected but ',' found.
  return n,m
          ^